--- a/cloverbazar/package.json
+++ b/cloverbazar/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.4.17",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
   },
